--- a/app/src/main/res/layout/item_recycler.xml
+++ b/app/src/main/res/layout/item_recycler.xml
@@ -11,6 +11,7 @@ android:padding="10dp">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:gravity="left"
         android:text="TextView" />
 
     <TextView
@@ -18,6 +19,7 @@ android:padding="10dp">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:gravity="center"
         android:text="TextView" />
 
     <TextView
@@ -25,5 +27,6 @@ android:padding="10dp">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:gravity="right"
         android:text="TextView" />
 </LinearLayout>
